--- a/CircleMenuTest/LMSelectLaiks.xib
+++ b/CircleMenuTest/LMSelectLaiks.xib
@@ -40,23 +40,22 @@
                                 <constraint firstItem="vd3-0Q-OlS" firstAttribute="width" secondItem="2sG-3C-Csm" secondAttribute="width" id="vIu-5b-mps"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AsK-Zj-KtL" userLabel="vwInfo">
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AsK-Zj-KtL" userLabel="vwInfo">
                             <rect key="frame" x="30" y="190" width="540" height="152"/>
                             <subviews>
-                                <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1qi-o7-snS" userLabel="vwBackground">
+                                <view alpha="0.59999999999999998" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1qi-o7-snS" userLabel="vwBackground">
                                     <rect key="frame" x="0.0" y="0.0" width="540" height="152"/>
                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tOE-V8-B7V" userLabel="lblInfo">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tOE-V8-B7V" userLabel="lblInfo">
                                     <rect key="frame" x="20" y="10" width="500" height="88"/>
                                     <string key="text">First tap on the Star button below to show the Like icons.
-Select the likes you wish to send by tapping on one or more icons.
-Once you selected the desired likes, tap on the save button in the middle to send them.</string>
+Select the likes you wish to send by tapping on one or more icons.</string>
                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ABg-xP-nFA">
+                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ABg-xP-nFA">
                                     <rect key="frame" x="20" y="108" width="500" height="34"/>
                                     <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
@@ -95,10 +94,23 @@ Once you selected the desired likes, tap on the save button in the middle to sen
                                         <action selector="btnMain:" destination="iN0-l3-epB" eventType="touchUpInside" id="Eal-BC-qcz"/>
                                     </connections>
                                 </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vkc-2V-7Ov" userLabel="btnBack">
+                                    <rect key="frame" x="15" y="185" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="EUl-49-nWb"/>
+                                        <constraint firstAttribute="height" constant="48" id="Y0D-cg-cEb"/>
+                                    </constraints>
+                                    <state key="normal" image="Back"/>
+                                    <connections>
+                                        <action selector="btnBack:" destination="iN0-l3-epB" eventType="touchUpInside" id="rc1-7u-Uw8"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="Q3i-Md-DZN" firstAttribute="centerY" secondItem="Vts-gX-6Tv" secondAttribute="centerY" id="Az1-HZ-3Mi"/>
+                                <constraint firstItem="Vkc-2V-7Ov" firstAttribute="leading" secondItem="Vts-gX-6Tv" secondAttribute="leading" constant="15" id="PI7-LO-Hyh"/>
+                                <constraint firstAttribute="bottom" secondItem="Vkc-2V-7Ov" secondAttribute="bottom" constant="5" id="dlk-wR-vBT"/>
                                 <constraint firstItem="Q3i-Md-DZN" firstAttribute="centerX" secondItem="Vts-gX-6Tv" secondAttribute="centerX" id="kiN-c2-pw9"/>
                                 <constraint firstAttribute="height" constant="238" id="lt4-gW-9lU"/>
                             </constraints>
@@ -126,6 +138,7 @@ Once you selected the desired likes, tap on the save button in the middle to sen
                 <constraint firstItem="gcv-xL-cmV" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="xuE-OK-RYC"/>
             </constraints>
             <connections>
+                <outlet property="btnBack" destination="Vkc-2V-7Ov" id="6gJ-TL-98M"/>
                 <outlet property="btnMain" destination="Q3i-Md-DZN" id="duu-iz-BAi"/>
                 <outlet property="lblLikeDescr" destination="vd3-0Q-OlS" id="BAM-aP-feq"/>
                 <outlet property="vwBackground" destination="1qi-o7-snS" id="lxb-mC-4dP"/>
@@ -139,6 +152,7 @@ Once you selected the desired likes, tap on the save button in the middle to sen
         </view>
     </objects>
     <resources>
+        <image name="Back" width="136" height="136"/>
         <image name="LikeStarOrange" width="48" height="48"/>
     </resources>
 </document>
