--- a/CircleMenuTest/LMIconMenu.xib
+++ b/CircleMenuTest/LMIconMenu.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LMSelectLaiks" customModule="CircleMenuTest" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LMIconMenu" customModule="CircleMenuTest" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -40,23 +40,23 @@
                                 <constraint firstItem="vd3-0Q-OlS" firstAttribute="width" secondItem="2sG-3C-Csm" secondAttribute="width" id="vIu-5b-mps"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AsK-Zj-KtL" userLabel="vwInfo">
-                            <rect key="frame" x="30" y="190" width="540" height="152"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AsK-Zj-KtL" userLabel="vwInfo">
+                            <rect key="frame" x="30" y="234" width="540" height="108"/>
                             <subviews>
-                                <view alpha="0.59999999999999998" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1qi-o7-snS" userLabel="vwBackground">
-                                    <rect key="frame" x="0.0" y="0.0" width="540" height="152"/>
+                                <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1qi-o7-snS" userLabel="vwBackground">
+                                    <rect key="frame" x="0.0" y="0.0" width="540" height="108"/>
                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tOE-V8-B7V" userLabel="lblInfo">
-                                    <rect key="frame" x="20" y="10" width="500" height="88"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tOE-V8-B7V" userLabel="lblInfo">
+                                    <rect key="frame" x="20" y="10" width="500" height="44"/>
                                     <string key="text">First tap on the Star button below to show the Like icons.
 Select the likes you wish to send by tapping on one or more icons.</string>
                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ABg-xP-nFA">
-                                    <rect key="frame" x="20" y="108" width="500" height="34"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ABg-xP-nFA">
+                                    <rect key="frame" x="20" y="64" width="500" height="34"/>
                                     <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                     <state key="normal" title="Got it, don't show this again">
@@ -148,7 +148,7 @@ Select the likes you wish to send by tapping on one or more icons.</string>
                 <outlet property="vwLikeDescr" destination="2sG-3C-Csm" id="czQ-Kq-fQH"/>
                 <outlet property="vwMain" destination="gcv-xL-cmV" id="JDE-zh-ObC"/>
             </connections>
-            <point key="canvasLocation" x="299" y="633"/>
+            <point key="canvasLocation" x="648" y="466"/>
         </view>
     </objects>
     <resources>
