--- a/CircleMenuTest/LMIconBtn.xib
+++ b/CircleMenuTest/LMIconBtn.xib
@@ -7,16 +7,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iUn-EM-4oM">
-            <rect key="frame" x="0.0" y="0.0" width="153" height="140"/>
+        <view contentMode="scaleToFill" id="iUn-EM-4oM" customClass="LMIconBtn" customModule="CircleMenuTest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="43O-pC-c8s" userLabel="btnIcon">
+                    <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                    <state key="normal">
+                        <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="btnIcon:" destination="iUn-EM-4oM" eventType="touchUpInside" id="G75-ml-OzV"/>
+                    </connections>
+                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4B7-7N-SlT" userLabel="vwCnt">
-                    <rect key="frame" x="123" y="10" width="20" height="20"/>
+                    <rect key="frame" x="34" y="-10" width="24" height="24"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIO-kN-rPT" userLabel="lblCnt">
-                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
-                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                            <rect key="frame" x="4" y="0.0" width="17" height="24"/>
+                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -24,28 +33,34 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="CIO-kN-rPT" firstAttribute="height" secondItem="4B7-7N-SlT" secondAttribute="height" id="CYQ-hj-QBy"/>
-                        <constraint firstItem="CIO-kN-rPT" firstAttribute="width" secondItem="4B7-7N-SlT" secondAttribute="width" id="KCz-FZ-oPU"/>
-                        <constraint firstAttribute="width" constant="20" id="LJT-LS-nAT"/>
+                        <constraint firstItem="CIO-kN-rPT" firstAttribute="width" secondItem="4B7-7N-SlT" secondAttribute="width" constant="-7" id="KCz-FZ-oPU"/>
+                        <constraint firstAttribute="width" constant="24" id="LJT-LS-nAT"/>
+                        <constraint firstItem="CIO-kN-rPT" firstAttribute="width" secondItem="4B7-7N-SlT" secondAttribute="width" constant="-7" id="LWZ-gt-5eq"/>
                         <constraint firstItem="CIO-kN-rPT" firstAttribute="centerY" secondItem="4B7-7N-SlT" secondAttribute="centerY" id="MkZ-Vp-ydn"/>
-                        <constraint firstAttribute="height" constant="20" id="RNo-Kr-nKy"/>
+                        <constraint firstAttribute="height" constant="24" id="RNo-Kr-nKy"/>
                         <constraint firstItem="CIO-kN-rPT" firstAttribute="centerX" secondItem="4B7-7N-SlT" secondAttribute="centerX" id="zon-SN-swe"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HD1-2W-cOC" userLabel="imgBtn">
-                    <rect key="frame" x="0.0" y="0.0" width="153" height="140"/>
-                </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="HD1-2W-cOC" secondAttribute="trailing" id="4ev-Kk-QRt"/>
-                <constraint firstAttribute="bottom" secondItem="HD1-2W-cOC" secondAttribute="bottom" id="ARu-ZA-h3t"/>
-                <constraint firstItem="HD1-2W-cOC" firstAttribute="leading" secondItem="iUn-EM-4oM" secondAttribute="leading" id="JEy-jH-WuP"/>
-                <constraint firstAttribute="trailing" secondItem="4B7-7N-SlT" secondAttribute="trailing" constant="10" id="Oyt-7E-KfP"/>
-                <constraint firstItem="4B7-7N-SlT" firstAttribute="top" secondItem="iUn-EM-4oM" secondAttribute="top" constant="10" id="RBr-xC-WI0"/>
-                <constraint firstItem="HD1-2W-cOC" firstAttribute="top" secondItem="iUn-EM-4oM" secondAttribute="top" id="vnT-Lt-oeD"/>
+                <constraint firstItem="43O-pC-c8s" firstAttribute="leading" secondItem="iUn-EM-4oM" secondAttribute="leading" id="NFA-8v-gyU"/>
+                <constraint firstAttribute="trailing" secondItem="4B7-7N-SlT" secondAttribute="trailing" constant="-10" id="Oyt-7E-KfP"/>
+                <constraint firstItem="4B7-7N-SlT" firstAttribute="top" secondItem="iUn-EM-4oM" secondAttribute="top" constant="-10" id="RBr-xC-WI0"/>
+                <constraint firstItem="43O-pC-c8s" firstAttribute="top" secondItem="iUn-EM-4oM" secondAttribute="top" id="ayc-Sq-DcT"/>
+                <constraint firstAttribute="trailing" secondItem="43O-pC-c8s" secondAttribute="trailing" id="ieM-JE-V6T"/>
+                <constraint firstAttribute="bottom" secondItem="43O-pC-c8s" secondAttribute="bottom" id="ygI-q5-8ob"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="611.5" y="358"/>
+            <connections>
+                <outlet property="btnIcon" destination="43O-pC-c8s" id="1uf-Tw-j9m"/>
+                <outlet property="constrBtnTop" destination="ayc-Sq-DcT" id="pf5-uc-d5f"/>
+                <outlet property="constrBtnTrail" destination="ieM-JE-V6T" id="hZs-Av-Vzn"/>
+                <outlet property="lblCnt" destination="CIO-kN-rPT" id="WuD-mg-xyC"/>
+                <outlet property="vwCnt" destination="4B7-7N-SlT" id="ZdE-19-p0a"/>
+            </connections>
+            <point key="canvasLocation" x="590.5" y="335.5"/>
         </view>
     </objects>
 </document>
